Added Header Section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,28 @@
     </header>
     <main>
         <!-- our service section start -->
-
+        <section class="my-5 service-cover">
+            <p class="text-white text-center">OUR SERVICE</p>
+            <h3 class="text-custom text-center">Pro Support to Simplify Your Move</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="rounded-3 p-2">
+                            <div class="service-image">
+                                <span>
+                                    <h5>International Moving</h5>
+                                </span>
+                            </div>
+                            <div class="bg-white">
+                                <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Incidunt, beatae. Ducimus
+                                    impedit saepe similique cupiditate ipsum eaque rerum eius voluptatum?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- our service section end -->
     </main>
 
