Added Service Section

--- a/index.html
+++ b/index.html
@@ -148,21 +148,71 @@
     <main>
         <!-- our service section start -->
         <section class="my-5 service-cover">
-            <p class="text-white text-center">OUR SERVICE</p>
-            <h3 class="text-custom text-center">Pro Support to Simplify Your Move</h3>
+            <p class="text-white text-center mt-5">OUR SERVICE</p>
+            <h1 class="text-custom text-center mt-3">Pro Support to Simplify Your Move</h1>
             <div class="container">
-                <div class="row">
+                <div class="row my-5">
                     <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="rounded-3 p-2">
-                            <div class="service-image">
-                                <span>
-                                    <h5>International Moving</h5>
+                        <div class="p-2">
+                            <div class="service-image-1 d-flex align-items-end justify-content-center shadow-lg">
+                                <span class="bg-black w-100 opacity-75">
+                                    <h5 class="text-custom text-center py-2">International Moving</h5>
                                 </span>
                             </div>
-                            <div class="bg-white">
-                                <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            <div class="bg-service opacity-75 rounded-bottom p-2">
+                                <p class="text-center text-white">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
                                     Incidunt, beatae. Ducimus
-                                    impedit saepe similique cupiditate ipsum eaque rerum eius voluptatum?</p>
+                                    impedit saepe similique.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="p-2">
+                            <div class="service-image-2 d-flex align-items-end justify-content-center shadow-lg">
+                                <span class="bg-black w-100 opacity-75">
+                                    <h5 class="text-custom text-center py-2">Global Relocation</h5>
+                                </span>
+                            </div>
+                            <div class="bg-service opacity-75 rounded-bottom p-2">
+                                <p class="text-center text-white">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
+                                    Incidunt, beatae. Ducimus
+                                    impedit saepe similique.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="p-2">
+                            <div class="service-image-3 d-flex align-items-end justify-content-center shadow-lg">
+                                <span class="bg-black w-100 opacity-75">
+                                    <h5 class="text-custom text-center py-2">Corporate Relocation</h5>
+                                </span>
+                            </div>
+                            <div class="bg-service opacity-75 rounded-bottom p-2">
+                                <p class="text-center text-white">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
+                                    Incidunt, beatae. Ducimus
+                                    impedit saepe similique.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="p-2">
+                            <div class="service-image-4 d-flex align-items-end justify-content-center shadow-lg">
+                                <span class="bg-black w-100 opacity-75">
+                                    <h5 class="text-custom text-center py-2">Relocate to Singapur</h5>
+                                </span>
+                            </div>
+                            <div class="bg-service opacity-75 rounded-bottom p-2">
+                                <p class="text-center text-white">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
+                                    Incidunt, beatae. Ducimus
+                                    impedit saepe similique.</p>
                             </div>
                         </div>
                     </div>
