Added about Section

--- a/index.html
+++ b/index.html
@@ -220,6 +220,30 @@
             </div>
         </section>
         <!-- our service section end -->
+
+        <!-- about us start -->
+        <section class="my-5">
+            <div class="container">
+                <div class="row bg-dark">
+                    <div class="col-lg-6 col-md-6-col-sm-12 p-0">
+                        <img class="img-fluid w-100 rounded-end" src="images/about.jpg" alt="about">
+                    </div>
+                    <div class="col-lg-6 col-md-6-col-sm-12">
+                        <div class="p-3">
+                            <p class="text-white">About Us</p>
+                            <h1 class="text-custom">Expert Moving Solution for any destination</h1>
+                            <p class="text-white py-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Mollitia
+                                debitis accusamus delectus quidem deleniti voluptas. Eos, quaerat libero distinctio qui
+                                officiis beatae, minima voluptatum commodi repudiandae quo eaque, sit modi.
+                            </p>
+                            <button class="btn btn-info">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- about us end -->
     </main>
 
     <!-- Bootstrap JS -->
