Added Testimonial Section

--- a/index.html
+++ b/index.html
@@ -244,6 +244,82 @@
             </div>
         </section>
         <!-- about us end -->
+
+        <!-- more service start -->
+        <section class="my-5">
+            <div class="container">
+                <p class="text-white text-center mt-5">OUR SERVICE</p>
+                <h1 class="text-custom text-center mt-3">Our Additional services in Singapur</h1>
+                <div class="row mt-5">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="bg-dark rounded-3">
+                            <div class="p-3 d-flex flex-column align-items-center">
+                                <i class="fa-solid fa-money-check-dollar text-white fs-1 fw-bold"></i>
+                                <h5 class="text-custom text-center">Insurance</h5>
+                                <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing
+                                    elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="bg-dark rounded-3">
+                            <div class="p-3 d-flex flex-column align-items-center">
+                                <i class="fa-brands fa-cc-mastercard text-white fs-1 fw-bold"></i>
+                                <h5 class="text-custom text-center">Insurance</h5>
+                                <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing
+                                    elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="bg-dark rounded-3">
+                            <div class="p-3 d-flex flex-column align-items-center">
+                                <i class="fa-solid fa-landmark-flag text-white fs-1 fw-bold"></i>
+                                <h5 class="text-custom text-center">Insurance</h5>
+                                <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing
+                                    elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="bg-dark rounded-3">
+                            <div class="p-3 d-flex flex-column align-items-center">
+                                <i class="fa-solid fa-land-mine-on text-white fs-1 fw-bold"></i>
+                                <h5 class="text-custom text-center">Insurance</h5>
+                                <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing
+                                    elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- more service start -->
+
+        <!-- testimonial section start -->
+        <section class="my-5">
+            <div class="container">
+                <p class="text-white text-center mt-5">Testimonial</p>
+                <h1 class="text-custom text-center mt-3">What Our Client Says</h1>
+                <div
+                    class="container my-5 bg-dark rounded-3 w-75 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-quote-left text-custom fs-1 mt-3"></i>
+                    <p class="text-white text-center my-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Assumenda
+                        eveniet
+                        ratione, quisquam
+                        labore provident natus repudiandae vel est dolorum tempora cum dolor repellat nemo blanditiis
+                        exercitationem, nisi, fugit alias dolorem illo odit pariatur corrupti? Sequi!</p>
+                    <img class="img-fluid testimonial-image rounded-circle mb-3" src="images/testimonial.jpg"
+                        alt="testimonial">
+                </div>
+            </div>
+        </section>
+        <!-- testimonial section end -->
     </main>
 
     <!-- Bootstrap JS -->
